[package]
name = "near_promises_example"
version = "0.1.0"
authors = ["Pierre-Alain <ouvrard.pierre.alain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../github/near-sdk-rs/near-sdk" }
# near-sdk = "2.0.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
